Fix text-align copyright in footer desktop layout

--- a/less/footer.less
+++ b/less/footer.less
@@ -204,11 +204,13 @@
 
     .footer__copyright {
       padding: 36px 0 69px;
+      text-align: center;
 
       @media @desktop {
         padding: 165px 0 0;
         margin-left: 60%;
         width: 100%;
+        text-align: left;
       }
 
       .copyright__text {
